Revert "Fix FV maincopy not expanding: stretch foreground, block wrap, 98% width at 320-425px."
This reverts commit e31f0efff6182db9c9bcf8b849de1649a5c9dee3.

--- a/mobile.css
+++ b/mobile.css
@@ -2900,27 +2900,24 @@
   }
 
   .home-page .fv-foreground {
-    align-items: stretch;
+    align-items: flex-start;
     width: 100%;
   }
 
   .home-page .fv-maincopy-wrap {
-    display: block;
-    flex: none;
     align-self: stretch;
-    width: calc(100% - 2%);
+    width: 100%;
     max-width: none;
-    margin-left: 1%;
-    margin-right: 1%;
-    padding: 0;
+    padding-left: 1%;
+    padding-right: 1%;
     box-sizing: border-box;
+    margin: 0;
   }
 
   .home-page .fv-maincopy {
     display: block;
     width: 100%;
     max-width: none;
-    min-width: 0;
     height: auto;
     margin: 0;
   }
